--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -730,7 +730,7 @@ section:not(#about) h2.framed-subtitle {
     margin: 0;
 }
 
-/* === WRITING/BLOG SECTION FONT === */
+/* === BLOG SECTION FONT === */
 /* Neon Writing Box and Text */
 .neon-box {
     display: inline-block;
